--- a/app/src/main/res/layout/fragment_promo_detail.xml
+++ b/app/src/main/res/layout/fragment_promo_detail.xml
@@ -30,7 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:layout_below="@id/buttonBack"
+                android:layout_below="@id/buttoonBack"
         android:layout_marginTop="10dp">
             <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
